# ChangeLog for www-servers/cherokee
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-servers/cherokee/ChangeLog,v 1.89 2012/03/18 19:26:28 pacho Exp $

  18 Mar 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due retirement, bug #391429.

*cherokee-1.2.101 (20 Oct 2011)

  20 Oct 2011; MATSUU Takuto <matsuu@gentoo.org> +cherokee-1.2.101.ebuild:
  Version bumped.

*cherokee-1.2.100 (17 Oct 2011)

  17 Oct 2011; MATSUU Takuto <matsuu@gentoo.org> -files/cherokee-initd-0.99.23,
  -cherokee-1.0.12.ebuild, -files/cherokee-initd-1.2.0, -cherokee-1.2.0.ebuild,
  -cherokee-1.2.1.ebuild, -cherokee-1.2.2.ebuild, -files/cherokee-initd-1.2.98,
  -cherokee-1.2.98.ebuild, -files/cherokee-1.2.98-gentoo.patch,
  +cherokee-1.2.100.ebuild:
  Version bumped. Removed old versions.

*cherokee-1.2.99 (16 Sep 2011)

  16 Sep 2011; MATSUU Takuto <matsuu@gentoo.org> +files/cherokee-initd-1.2.99,
  +cherokee-1.2.99.ebuild, +files/cherokee-1.2.99-gentoo.patch,
  +files/cherokee.logrotate:
  Version bumped. Added cherokee.logrotate. Fixed graceful and reload in
  init.d, bug #348929. Clean up.

*cherokee-1.2.98 (26 Aug 2011)

  26 Aug 2011; MATSUU Takuto <matsuu@gentoo.org> +files/cherokee-confd-1.2.98,
  +files/cherokee-initd-1.2.98, +cherokee-1.2.98.ebuild,
  +files/cherokee-1.2.98-gentoo.patch, +files/cherokee-1.2.98-linux3.patch:
  Version bumped. Added php and static-libs USE flags. Removed fastcgi USE
  flag. Added PYTHON_USE_WITH="theads", bug #364533. Added many fixes.

*cherokee-1.2.2 (24 May 2011)

  24 May 2011; Lars Wendler <polynomial-c@gentoo.org> +cherokee-1.2.2.ebuild:
  Non-maintainer commit: Version bump.

  04 Apr 2011; Tomáš Chvátal <scarabeus@gentoo.org> cherokee-1.0.12.ebuild,
  cherokee-1.2.0.ebuild, cherokee-1.2.1.ebuild:
  Move to virtual/ffmpeg from media-video/ffmpeg.

*cherokee-1.2.1 (02 Mar 2011)

  02 Mar 2011; <bass@gentoo.org> files/cherokee-initd-1.2.0,