@@ -1,6 +1,10 @@
 # ChangeLog for www-servers/cherokee
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-servers/cherokee/ChangeLog,v 1.89 2012/03/18 19:26:28 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-servers/cherokee/ChangeLog,v 1.90 2012/03/21 11:28:58 pacho Exp $
+
+  21 Mar 2012; Pacho Ramos <pacho@gentoo.org> -cherokee-1.2.100.ebuild,
+  -cherokee-1.2.99.ebuild, metadata.xml:
+  Drop www-server herd as discussed in gentoo-dev ML. Drop old.
 
   18 Mar 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
   Drop maintainer due retirement, bug #391429.
